<resources>
    <string name="app_name">Final_Project</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_login">Click To Login</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="register_now">Register </string>
    <string name="login_now">Login </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
</resources>